--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ section {
   display: flex;
   /* align-items: center; */
   justify-content: center;
-  margin: 1.5em;
+  /* margin: 1.5em; */
   /* margin-bottom: 4em; */
   /* width: 100vw; */
 }
